# libvda5050pp

./: .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  README.md  mkdocs.yml
.gitlab/docker/package/: Dockerfile  version.yml
.gitlab/docker/sonar/: Dockerfile  version.yml
.gitlab/merge_request_templates/: default.md
cmake/: PostInstall.cmake  code-coverage.cmake  deb.cmake  enable-clean-install.cmake  ensure-deps.cmake  install.cmake  libvda5050++Config.cmake.in  platform.cmake
docker/: Dockerfile  build-container.sh  default-build  default-deb  run-container.sh
docs/: CMakeLists.txt  api.md  build-docs.md  configuration.md  dependencies.md  index.md  install.md  quickstart.md
docs/doxygen/html/: index.md
examples/: CMakeLists.txt  README.md  example_config.toml
examples/src/: detailed_action_handler_demo.cpp  event_demo.cpp  full_config.cpp  handler_demo.cpp
include/private/vda5050++/core/: action_event_manager.h  action_status_manager.h  config.h  generic_event_manager.h  instance.h  logger.h  module.h  navigation_event_manager.h  navigation_status_manager.h  query_event_manager.h  status_event_manager.h
include/public/vda5050++/: config.h  exception.h  handle.h  version.h
include/public/vda5050++/agv_description/: action_declaration.h  agv_description.h  battery.h  parameter_range.h  simple_protocol_limits.h
include/public/vda5050++/config/: agv_description_subconfig.h  event_manager_options.h  global_config.h  key_value_config.h  logging_subconfig.h  module_subconfig.h  mqtt_options.h  mqtt_subconfig.h  node_reached_subconfig.h  query_event_handler_subconfig.h  state_subconfig.h  state_update_timer_subconfig.h  types.h  visualization_timer_subconfig.h
include/public/vda5050++/events/: action_event.h  event_handle.h  event_type.h  navigation_event.h  query_event.h  scoped_action_event_subscriber.h  scoped_navigation_event_subscriber.h  scoped_query_event_subscriber.h  status_event.h  synchronized_event.h
include/public/vda5050++/handler/: action_state.h  base_action_handler.h  base_navigation_handler.h  base_query_handler.h  init_position_handler.h  simple_action_handler.h  simple_multi_action_handler.h
include/public/vda5050++/misc/: action_context.h  action_declarations.h  any_ptr.h  (+4 more)
patches/: 0001-build-FindPahoMqttC-use-static-suffix.patch
src/: CMakeLists.txt
src/vda5050++/: config.cpp  exception.cpp  handle.cpp  version.cpp
src/vda5050++/config/: agv_description_subconfig.cpp  global_config.cpp  key_value_config.cpp  logging_subconfig.cpp  module_subconfig.cpp  mqtt_subconfig.cpp  node_reached_subconfig.cpp  query_event_handler_subconfig.cpp  state_subconfig.cpp  state_update_timer_subconfig.cpp  types.cpp  visualization_timer_subconfig.cpp
src/vda5050++/core/: action_event_manager.cpp  action_status_manager.cpp  config.cpp  instance.cpp  logger.cpp  navigation_event_manager.cpp  navigation_status_manager.cpp  query_event_manager.cpp  status_event_manager.cpp
src/vda5050++/core/agv_handler/: action_event_handler.cpp  action_state.cpp  functional.cpp  navigation_event_handler.cpp  node_reached_handler.cpp  query_event_handler.cpp
src/vda5050++/core/checks/: action.cpp  header.cpp  order.cpp
src/vda5050++/core/common/: conversion.cpp  exception.cpp  type_traits.cpp
src/vda5050++/core/events/: event_control_blocks.cpp
src/vda5050++/core/factsheet/: factsheet_event_handler.cpp  gather.cpp
src/vda5050++/core/interpreter/: control_instant_actions.cpp  functional.cpp  interpreter_event_handler.cpp
src/vda5050++/core/messages/: message_event_handler.cpp  mqtt_module.cpp
src/vda5050++/core/order/: action_task.cpp  navigation_task.cpp  order_event_handler.cpp  scheduler.cpp
src/vda5050++/core/state/: graph.cpp  order_manager.cpp  state_event_handler.cpp  state_update_timer.cpp  state_update_urgency.cpp  status_manager.cpp  visualization_timer.cpp
src/vda5050++/core/validation/: validation_event_handler.cpp
src/vda5050++/events/: event_handle.cpp  synchronized_event.cpp
src/vda5050++/handler/: action_state.cpp  base_navigation_handler.cpp  base_query_handler.cpp  init_position_handler.cpp  simple_action_handler.cpp  simple_multi_action_handler.cpp
src/vda5050++/misc/: action_parameter_view.cpp
src/vda5050++/observer/: message_observer.cpp  order_observer.cpp
src/vda5050++/sinks/: navigation_sink.cpp  status_sink.cpp
test/: CMakeLists.txt  main.cpp
test/include/test/: data.h  exception.h  test_action_handler.h
test/src/: data.cpp  test_action_handler.cpp
test/vda5050++/: config.cpp  handle.cpp
test/vda5050++/common/: any_ptr.cpp
test/vda5050++/config/: key_value_config.cpp  types.cpp
test/vda5050++/core/: action_event_manager.cpp  generic_event_manager.cpp
test/vda5050++/core/agv_handler/: action_event_handler.cpp  functional.cpp  navigation_event_handler.cpp  node_reached_handler.cpp  query_event_handler.cpp
test/vda5050++/core/checks/: action.cpp  header.cpp  order.cpp
test/vda5050++/core/common/: blocking_queue.cpp  conversion.cpp  exception.cpp  formatters.cpp  interruptable_timer.cpp  scoped_thread.cpp  semaphore.cpp
test/vda5050++/core/common/math/: geometry.cpp  linear_path_length_calculator.cpp
test/vda5050++/core/events/: event_control_blocks.cpp
test/vda5050++/core/factsheet/: gather.cpp
test/vda5050++/core/handler/: action_event_handler.cpp  action_state.cpp
test/vda5050++/core/interpreter/: functional.cpp
test/vda5050++/core/messages/: message_event_handler.cpp
test/vda5050++/core/order/: action_task.cpp  navigation_task.cpp  scheduler.cpp
test/vda5050++/core/state/: graph.cpp  state_event_handler.cpp
test/vda5050++/core/validation/: validation_event_handler.cpp
test/vda5050++/event_behaviour/: interpreter_event_behaviour.cpp  status_event_behaviour.cpp
test/vda5050++/events/: event_handle.cpp  synchronized_event.cpp
test/vda5050++/handler/: base_navigation_handler.cpp
test/vda5050++/misc/: action_parameter_view.cpp
test/vda5050++/observer/: message_observer.cpp  order_observer.cpp
test/vda5050++/sinks/: navigation_sink.cpp  status_sink.cpp
(+53 files in other folders)
